# rustic

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Jenkinsfile  Makefile  README.md
backends/gstreamer/: Cargo.toml  README.md
backends/gstreamer/src/: lib.rs
backends/rodio/: Cargo.toml  README.md
backends/rodio/src/: file.rs  lib.rs
backends/snapcast/: Cargo.toml
backends/snapcast/api/: Cargo.toml
backends/snapcast/api/src/: error.rs  lib.rs  rpc.rs
backends/snapcast/src/: audio_transport.rs  background_job.rs  lib.rs  symphonia_decoder.rs
clients/ffi/: .gitignore  Cargo.toml  build.rs  cbindgen.toml
clients/ffi/macros/: Cargo.toml
clients/ffi/macros/src/: blocking.rs  callback.rs  lib.rs  models.rs
clients/ffi/src/: async_extern_executor.rs  client.rs  error.rs  helpers.rs  http.rs  lib.rs  models.rs  sync.rs
clients/ffi/src/models/: album.rs  artist.rs  mod.rs  player.rs  playlist.rs  track.rs
clients/ffi/tests/: cb_http_interop.c  sync_http_interop.c  test.rs
clients/ffi/tests/support/: mod.rs
clients/http/: Cargo.toml
clients/http/native/: Cargo.toml
clients/http/native/src/: lib.rs
clients/http/src/: lib.rs
clients/http/wasm/: Cargo.toml  package.json  package.sh
clients/http/wasm/src/: client.rs  client_interface.rs  lib.rs  utils.rs  wasm.rs
clients/native/: Cargo.toml
clients/native/src/: lib.rs  library.rs  player.rs  playlist.rs  provider.rs  queue.rs  stream_util.rs
core/: Cargo.toml  README.md
core/api/: Cargo.toml
core/api/src/: client.rs  conversion.rs  cursor.rs  lib.rs  test_client.rs
core/api/src/models/: aggregations.rs  album.rs  artist.rs  available_provider.rs  cover_art.rs  extension.rs  library_event.rs  meta.rs  mod.rs  open_result.rs  player.rs  player_event.rs  playlist.rs  provider.rs  queue_event.rs  repeat_mode.rs  search.rs  sync_state.rs  track.rs
core/extensions/: Cargo.toml
core/extensions/src/: api.rs  controls.rs  host.rs  lib.rs  macros.rs  manager.rs  plugin.rs  runtime.rs
core/queue/: Cargo.toml
core/queue/src/: lib.rs
core/reflect/: Cargo.toml
core/reflect/macros/: Cargo.toml
core/reflect/macros/src/: lib.rs
core/reflect/src/: helpers.rs  lib.rs  structs.rs  traits.rs
core/src/: cred_store.rs  lib.rs  storage_backend.rs  sync.rs
core/src/cache/: mod.rs
core/src/extension/: api.rs  client.rs  commands.rs  host.rs  mod.rs
core/src/player/: backend.rs  builder.rs  bus.rs  event.rs  memory_queue.rs  mod.rs  state.rs
core/src/player/queue/: memory_queue.rs  mod.rs
core/src/provider/: explorer.rs  folder.rs  item.rs  mod.rs  sync_error.rs
extensions/party-mode/: Cargo.toml
extensions/party-mode/src/: lib.rs  main.rs
extensions/uwu/: Cargo.toml
extensions/uwu/src/: lib.rs
frontends/dbus/: Cargo.toml
frontends/dbus/src/: lib.rs
frontends/druid/: Cargo.toml
frontends/druid/src/: commands.rs  icon.rs  lib.rs  theme.rs
frontends/druid/src/delegate/: album.rs  image.rs  library.rs  mod.rs  navigation.rs  partial.rs  playlist.rs  queue.rs  stream.rs
frontends/druid/src/state/: album.rs  async_data.rs  mod.rs  playback.rs  playlist.rs  search.rs  sidebar.rs
frontends/druid/src/ui/: albums.rs  artists.rs  header.rs  mod.rs  playlist.rs  search.rs  sidebar.rs  songs.rs  track_list.rs
frontends/druid/src/widgets/: async_widget.rs  grid.rs  hover.rs  mod.rs  remote_image.rs
frontends/http/: .gitignore  Cargo.toml  README.md
frontends/http/src/: app.rs  cursor.rs  lib.rs  test.rs
frontends/http/src/controller/: extensions.rs  library.rs  mod.rs  player.rs  playlists.rs  providers.rs  queue.rs  search.rs
frontends/http/src/handler/: coverart.rs  extensions.rs  library.rs  mod.rs  player.rs  providers.rs  queue.rs  search.rs
frontends/http/src/socket/: events.rs  messages.rs  mod.rs  server.rs  session.rs
frontends/http/src/viewmodels/: album.rs  artist.rs  available_provider.rs  extension.rs  mod.rs  open_result.rs  player.rs  playlist.rs  provider.rs  search.rs  track.rs
frontends/iced/: Cargo.toml
frontends/iced/src/: component.rs  lib.rs  messages.rs  overlay.rs
frontends/iced/src/recipes/: mod.rs
frontends/iced/src/views/: main_view.rs  mod.rs
frontends/mpd/: Cargo.toml  README.md
frontends/mpd/src/: client_ext.rs  lib.rs  song.rs
frontends/mpd/src/commands/: add_track.rs  albumart.rs  change_volume.rs  clear_queue.rs  commands.rs  current_song.rs  list_artist.rs  list_info.rs  list_playlist.rs  list_playlist_info.rs  list_playlists.rs  load_playlist.rs  mod.rs  next.rs  outputs.rs  pause.rs  play.rs  playlist_info.rs  previous.rs  set_volume.rs  status.rs  stop.rs  tagtypes.rs  toggle_pause.rs
frontends/qt/: Cargo.toml  README.md
frontends/qt/qml/: main.qml
frontends/qt/src/: lib.rs  main.qml
frontends/systray/: Cargo.toml
frontends/systray/src/: lib.rs
provider/gmusic/: Cargo.toml  README.md
provider/gmusic/src/: album.rs  artist.rs  lib.rs  meta.rs  playlist.rs  track.rs
provider/pocketcasts/: .gitignore  Cargo.toml  README.md
provider/pocketcasts/src/: episode.rs  lib.rs  meta.rs  podcast.rs
provider/soundcloud/: Cargo.toml  README.md
provider/soundcloud/src/: error.rs  lib.rs  meta.rs  playlist.rs  track.rs  user.rs
provider/spotify/: Cargo.toml  README.md
provider/spotify/src/: album.rs  artist.rs  lib.rs  meta.rs  player.rs  playlist.rs  track.rs  util.rs
provider/youtube/: Cargo.toml
provider/youtube/src/: lib.rs  meta.rs  playlist.rs  playlist_item.rs  search_result.rs  video_metadata.rs
provider/ytmusic/: Cargo.toml
provider/ytmusic/src/: lib.rs
provider/ytmusic/src/mappings/: album.rs  artist.rs  mod.rs  playlist.rs  track.rs
rustic/: .gitignore  Cargo.toml  README.md
rustic/src/: config.rs  main.rs
store/helpers/: Cargo.toml  README.md
store/helpers/src/: lib.rs
store/memory/: Cargo.toml  README.md
store/memory/src/: lib.rs  library.rs
store/sled/: .gitignore  Cargo.toml  README.md
store/sled/src/: lib.rs  library.rs  util.rs
store/sqlite/: .gitignore  Cargo.toml  README.md
store/sqlite/src/: lib.rs  schema.rs
store/sqlite/src/entities/: album.rs  artist.rs  (+4 more)
(+45 files in other folders)
