[workspace]
members = [
    "core",
    "core/api",
    "core/extensions",
    "core/reflect",
    "core/reflect/macros",
    "backends/google-cast",
    "backends/gstreamer",
    "backends/rodio",
    "backends/snapcast",
    "backends/snapcast/api",
    "frontends/dbus",
    "frontends/http",
    "frontends/mpd",
    "frontends/qt",
    "frontends/systray",
    "provider/local",
    "provider/pocketcasts",
    "provider/soundcloud",
    "provider/spotify",
    "provider/gmusic",
    "provider/youtube",
    "store/helpers",
    "store/memory",
    "store/sled",
    "store/sqlite",
    "extensions/party-mode",
    "extensions/uwu",
    "clients/http",
    "clients/http/native",
    "clients/http/wasm",
    "clients/native",
    "clients/ffi",
    "clients/ffi/macros"
]

[package]
name = "rustic"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
edition = "2018"
repository = "https://github.com/rustic-music-player/rustic"
homepage = "https://github.com/rustic-music-player/rustic"

[features]
default = [
	"sled-store",
	"http-frontend",
	"gstreamer-backend",
	"rodio-backend",
	"local-files-provider",
	"pocketcasts-provider",
	"soundcloud-provider",
	"gmusic-provider",
	"youtube-provider",
	"iced-frontend",
	"http-client"
]

all-frontends = ["mpd-frontend", "http-frontend", "dbus-frontend", "qt-frontend", "iced-frontend", "systray-frontend"]
mpd-frontend = ["rustic-mpd-frontend"]
http-frontend = ["rustic-http-frontend"]
dbus-frontend = ["rustic-dbus-frontend"]
qt-frontend = ["rustic-qt-frontend"]
iced-frontend = ["rustic-iced-frontend"]
systray-frontend = ["rustic-systray-frontend"]
all-backends = ["gstreamer-backend", "rodio-backend", "google-cast-backend", "snapcast-backend"]
gstreamer-backend = ["rustic-gstreamer-backend"]
rodio-backend = ["rustic-rodio-backend"]
google-cast-backend = ["rustic-google-cast-backend"]
snapcast-backend = ["rustic-snapcast-backend"]
all-providers = ["local-files-provider", "pocketcasts-provider", "soundcloud-provider", "spotify-provider", "gmusic-provider", "youtube-provider"]
local-files-provider = ["rustic-local-provider"]
pocketcasts-provider = ["rustic-pocketcasts-provider"]
soundcloud-provider = ["rustic-soundcloud-provider"]
spotify-provider = ["rustic-spotify-provider"]
gmusic-provider = ["rustic-gmusic-provider"]
youtube-provider = ["rustic-youtube-provider"]
all-stores = ["sled-store", "sqlite-store"]
sled-store = ["rustic-sled-store"]
sqlite-store = ["rustic-sqlite-store"]
http-client = ["rustic-native-http-client"]

[dependencies]
env_logger = "0.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.4"
url = "2.1"
failure = "0.1"
ctrlc = { version = "3.1", features = ["termination"] }
structopt = "0.3"
futures = { version = "0.3", features = ["std", "async-await"], default-features = false }
tokio = { version = "0.2", features = ["rt-threaded", "macros", "sync", "fs"] }
serde_json = "1"
async-trait = "0.1"
keyring = "0.9"
pinboard = "2"

[dependencies.rustic-core]
path = "core"

[dependencies.rustic-extension-api]
path = "core/extensions"

[dependencies.rustic-memory-store]
path = "store/memory"

[dependencies.rustic-api]
path = "core/api"

[dependencies.rustic-native-client]
path = "clients/native"

[dependencies.rustic-native-http-client]
path = "clients/http/native"
optional = true

[dependencies.rustic-sled-store]
path = "store/sled"
optional = true

[dependencies.rustic-sqlite-store]
path = "store/sqlite"
optional = true

[dependencies.rustic-http-frontend]
path = "frontends/http"
optional = true

[dependencies.rustic-mpd-frontend]
path = "frontends/mpd"
optional = true

[dependencies.rustic-dbus-frontend]
path = "frontends/dbus"
optional = true

[dependencies.rustic-qt-frontend]
path = "frontends/qt"
optional = true

[dependencies.rustic-iced-frontend]
path = "frontends/iced"
optional = true

[dependencies.rustic-systray-frontend]
path = "frontends/systray"
optional = true

[dependencies.rustic-gstreamer-backend]
path = "backends/gstreamer"
optional = true

[dependencies.rustic-rodio-backend]
path = "backends/rodio"
optional = true

[dependencies.rustic-snapcast-backend]
path = "backends/snapcast"
optional = true

[dependencies.rustic-google-cast-backend]
path = "backends/google-cast"
optional = true

[dependencies.rustic-local-provider]
path = "provider/local"
optional = true

[dependencies.rustic-spotify-provider]
path = "provider/spotify"
optional = true

[dependencies.rustic-pocketcasts-provider]
path = "provider/pocketcasts"
optional = true

[dependencies.rustic-soundcloud-provider]
path = "provider/soundcloud"
optional = true

[dependencies.rustic-gmusic-provider]
path = "provider/gmusic"
optional = true

[dependencies.rustic-youtube-provider]
path = "provider/youtube"
optional = true

[patch.crates-io.owoify_rs]
git = "https://github.com/maxjoehnk/owoify_rs"
branch = "feature/lazy-regex"
