[workspace]
members = [
    "core",
    "core/api",
    "core/extensions",
    "core/queue",
    "core/reflect",
    "core/reflect/macros",
#    "backends/google-cast",
    "backends/gstreamer",
    "backends/rodio",
    "backends/snapcast",
    "backends/snapcast/api",
    "frontends/dbus",
    "frontends/druid",
    "frontends/http",
    "frontends/iced",
    "frontends/mpd",
    "frontends/qt",
    "frontends/systray",
    "provider/local",
    "provider/pocketcasts",
    "provider/soundcloud",
    "provider/spotify",
    "provider/youtube",
    "store/helpers",
    "store/memory",
    "store/sled",
    "store/sqlite",
    "extensions/uwu",
    "clients/http",
    "clients/http/native",
    "clients/http/wasm",
    "clients/native",
    "clients/ffi",
    "clients/ffi/macros"
]

[package]
name = "rustic"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
edition = "2018"
repository = "https://github.com/rustic-music-player/rustic"
homepage = "https://rustic.cloud"

[features]
default = [
	"sled-store",
	"http-frontend",
    "mpd-frontend",
	"gstreamer-backend",
	"rodio-backend",
	"local-files-provider",
	"pocketcasts-provider",
	"soundcloud-provider",
	"youtube-provider",
	"druid-frontend",
	"http-client"
]

all-frontends = ["mpd-frontend", "http-frontend", "dbus-frontend", "druid-frontend", "qt-frontend", "iced-frontend", "systray-frontend"]
mpd-frontend = ["rustic-mpd-frontend"]
http-frontend = ["rustic-http-frontend"]
dbus-frontend = ["rustic-dbus-frontend"]
druid-frontend = ["rustic-druid-frontend"]
qt-frontend = ["rustic-qt-frontend"]
iced-frontend = ["rustic-iced-frontend"]
systray-frontend = ["rustic-systray-frontend"]
all-backends = ["gstreamer-backend", "rodio-backend", "snapcast-backend"]
gstreamer-backend = ["rustic-gstreamer-backend"]
rodio-backend = ["rustic-rodio-backend"]
#Disabled until protobuf version missmatch between rust-cast and librespot is resolved
#google-cast-backend = ["rustic-google-cast-backend"]
snapcast-backend = ["rustic-snapcast-backend"]
all-providers = ["local-files-provider", "pocketcasts-provider", "soundcloud-provider", "spotify-provider", "youtube-provider"]
local-files-provider = ["rustic-local-provider"]
pocketcasts-provider = ["rustic-pocketcasts-provider"]
soundcloud-provider = ["rustic-soundcloud-provider"]
spotify-provider = ["rustic-spotify-provider"]
youtube-provider = ["rustic-youtube-provider"]
all-stores = ["sled-store", "sqlite-store"]
sled-store = ["rustic-sled-store"]
sqlite-store = ["rustic-sqlite-store"]
http-client = ["rustic-native-http-client"]

[dependencies]
env_logger = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
url = "2.2"
failure = "0.1"
ctrlc = { version = "3.1", features = ["termination"] }
structopt = "0.3"
futures = { version = "0.3", features = ["std", "async-await"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
serde_json = "1"
async-trait = "0.1"
keyring = "0.10"
pinboard = "2"

[dependencies.rustic-core]
path = "core"

[dependencies.rustic-extension-api]
path = "core/extensions"

[dependencies.rustic-memory-store]
path = "store/memory"

[dependencies.rustic-api]
path = "core/api"

[dependencies.rustic-native-client]
path = "clients/native"

[dependencies.rustic-native-http-client]
path = "clients/http/native"
optional = true

[dependencies.rustic-sled-store]
path = "store/sled"
optional = true

[dependencies.rustic-sqlite-store]
path = "store/sqlite"
optional = true

[dependencies.rustic-http-frontend]
path = "frontends/http"
optional = true

[dependencies.rustic-mpd-frontend]
path = "frontends/mpd"
optional = true

[dependencies.rustic-dbus-frontend]
path = "frontends/dbus"
optional = true

[dependencies.rustic-druid-frontend]
path = "frontends/druid"
optional = true

[dependencies.rustic-qt-frontend]
path = "frontends/qt"
optional = true

[dependencies.rustic-iced-frontend]
path = "frontends/iced"
optional = true

[dependencies.rustic-systray-frontend]
path = "frontends/systray"
optional = true

[dependencies.rustic-gstreamer-backend]
path = "backends/gstreamer"
optional = true

[dependencies.rustic-rodio-backend]
path = "backends/rodio"
optional = true

[dependencies.rustic-snapcast-backend]
path = "backends/snapcast"
optional = true

#[dependencies.rustic-google-cast-backend]
#path = "backends/google-cast"
#optional = true

[dependencies.rustic-local-provider]
path = "provider/local"
optional = true

[dependencies.rustic-spotify-provider]
path = "provider/spotify"
optional = true

[dependencies.rustic-pocketcasts-provider]
path = "provider/pocketcasts"
optional = true

[dependencies.rustic-soundcloud-provider]
path = "provider/soundcloud"
optional = true

[dependencies.rustic-youtube-provider]
path = "provider/youtube"
optional = true
