[package]
name = "rustic-core"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/rustic-music-player/rustic"
homepage = "https://github.com/rustic-music-player/rustic"

[dependencies]
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1"
reqwest = { version = "0.11", features = ["stream", "blocking"] }
url = "2.2"
failure = "0.1"
md5 = "0.7"
bitflags = "1"
bincode = "1.2.1"
pinboard = "2"
itertools = "0.8"
futures = { version = "0.3", features = ["std", "async-await"], default-features = false }
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "time", "sync", "fs"] }
tokio-util = { version = "0.6", features = ["compat"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
rustic-queue = { path = "./queue" }
