[package]
name = "rustic-daemon"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/rustic-music-player/rustic"
homepage = "https://github.com/rustic-music-player/rustic"

[dependencies]
env_logger = "0.5"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4.5"
url = "1.7"
failure = "0.1"
ctrlc = { version = "3.1", features = ["termination"] }

[dependencies.rustic-core]
path = "../core"

[dependencies.rustic-memory-store]
path = "../store/memory"

[dependencies.rustic-sqlite-store]
path = "../store/sqlite"

[dependencies.rustic-http-frontend]
path = "../frontends/http"

[dependencies.rustic-mpd-frontend]
path = "../frontends/mpd"

[dependencies.rustic-qt-frontend]
path = "../frontends/qt"

[dependencies.rustic-gstreamer-backend]
path = "../backends/gstreamer"

[dependencies.rustic-local-provider]
path = "../provider/local"

[dependencies.rustic-spotify-provider]
path = "../provider/spotify"

[dependencies.rustic-pocketcasts-provider]
path = "../provider/pocketcasts"

[dependencies.rustic-soundcloud-provider]
path = "../provider/soundcloud"
