[package]
name = "rustic-gstreamer-backend"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/rustic-music-player/rustic"
homepage = "https://github.com/rustic-music-player/rustic"
edition = "2018"

[dependencies]
log = "0.4"
failure = "0.1"
gstreamer = "0.16"
gstreamer-player = "0.16"
glib = "0.10"
pinboard = "2.0.0"

[dependencies.rustic-core]
path = "../../core"
