[package]
name = "rustic-rodio-backend"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/rustic-music-player/rodio-backend"
homepage = "https://github.com/rustic-music-player/rodio-backend"

[dependencies]
crossbeam-channel = "0.2"
log = "0.4"
failure = "0.1"
url = "1.7"
rodio = "0.8"

[dependencies.rustic-core]
path = "../../core"