[package]
name = "rustic-snapcast-backend"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
failure = "0.1"
log = "0.4"
url = "2.1"
unix-named-pipe = "0.2"
smol = "1"
symphonia = { version = "0.1", features = ["mp3"] }
futures = "0.3"
pinboard = "2"

[dependencies.snapcast-api]
path  = "./api"

[dependencies.rustic-core]
path = "../../core"
