[package]
name = "rustic-ffi-client"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["http", "in-process", "sync", "async_extern_executor"]
http = ["rustic-native-http-client"]
in-process = ["rustic-native-client"]
callback = []
sync = ["tokio"]
async_extern_executor = ["extern_executor"]
async_tokio = ["tokio"]

[dependencies]
futures =  { version = "0.3", optional = true, features = ["std", "async-await"], default-features = false }
libc = "0.2"
extern_executor = { version = "0.1", optional = true }
failure = "0.1"
tokio = { version = "0.2", features = ["rt-core"], optional = true }
rustic-api = { path = "../../core/api", default-features = false }
rustic-native-client = { path = "../native", optional = true }
rustic-native-http-client = { path = "../http/native", optional = true }

[build-dependencies]
cbindgen = "0.14"
cc = "1"

[dev-dependencies]
