[package]
name = "rustic-ffi-client"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["http", "in-process", "sync", "async_tokio"]
http = ["rustic-native-http-client"]
in-process = ["rustic-native-client"]
sync = ["tokio"]
async_tokio = ["tokio"]

[dependencies]
futures =  { version = "0.3", optional = true, features = ["std", "async-await"], default-features = false }
libc = "0.2"
failure = "0.1"
tokio = { version = "1", features = ["rt"], optional = true }
lazy_static = "1.4"
rustic-api = { path = "../../core/api", default-features = false }
rustic-native-client = { path = "../native", optional = true }
rustic-native-http-client = { path = "../http/native", optional = true }
rustic-ffi-client-macros = { path = "./macros" }

