[package]
name = "rustic-native-client"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustic-api = { path = "../../core/api" }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
rustic-core = { path = "../../core" }
failure = "0.1"