[package]
name = "rustic-native-client"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
rustic-api = { path = "../../core/api" }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
rustic-core = { path = "../../core" }
rustic-extension-api = { path = "../../core/extensions" }
failure = "0.1"
stopwatch = "0.0.7"
log = "0.4"
itertools = "0.9"
futures = { version = "0.3", features = ["std", "async-await"], default-features = false }
