[package]
name = "rustic-api"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["conversion"]
conversion = ["rustic-core", "base64"]

[dependencies]
serde = { version = "1", features = ["derive"] }
rustic-core = { path = "../", optional = true }
base64 = { version = "0.12", optional = true }
async-trait = "0.1"
failure = "0.1"