[package]
name = "rustic-api"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["conversion"]
conversion = ["rustic-core", "rustic-extension-api"]
testing = ["simulacrum"]

[dependencies]
serde = { version = "1", features = ["derive"] }
rustic-core = { path = "../", optional = true }
rustic-extension-api = { path = "../extensions", optional = true }
rustic-reflect = { path = "../reflect" }
rustic-reflect-macros = { path = "../reflect/macros" }
base64 = { version = "0.12" }
async-trait = "0.1"
failure = "0.1"
futures = "0.3"
simulacrum = { git = "https://github.com/pcsm/simulacrum.git", branch = "integration/v0.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
typescript-definitions = { version = "0.1", package = "typescript-definitions-ufo-patch", features = ["export-typescript"] }
wasm-bindgen = "0.2"
