[package]
name = "rustic-extension-api"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
failure = "0.1"
log = "0.4"

[dependencies.rustic-core]
path = "../"
