[package]
name = "rustic-extension-api"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
failure = "0.1"
log = "0.4"
tokio = { version = "1", features = ["sync"] }
libloading = "0.6"
futures = "0.3"

[dependencies.rustic-core]
path = "../"

[dependencies.rustic-queue]
path = "../queue"
