[package]
name = "rustic-party-mode-extension"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/rustic-music-player/rustic"
homepage = "https://github.com/rustic-music-player/rustic"

[lib]
crate-type = ["cdylib"]

[dependencies]

[dependencies.rustic-extension-api]
path = "../../core/extensions"
