[package]
name = "rustic-dbus-frontend"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
dbus = { version = "0.9", features = ["futures"] }
dbus-tokio = "0.6"
dbus-crossroads = "0.3"
failure = "0.1"
tokio = { version = "0.2", features = ["rt-core"] }
log = "0.4"

[dependencies.rustic-api]
path = "../../core/api"
