[package]
name = "rustic-dbus-frontend"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
tokio = { version = "1", features = ["rt"] }
log = "0.4"
zbus = { version = "3.2", default-features = false, features = ["tokio"] }

[dependencies.rustic-api]
path = "../../core/api"
