[package]
name = "rustic-druid-frontend"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/rustic-music-player/rustic"
homepage = "https://github.com/rustic-music-player/rustic"

[dependencies]
druid = { version = "0.7", features = ["im", "image", "jpeg", "jpeg_rayon", "png", "webp"] }
failure = "0.1"
log = "0.4"
tokio = "0.2"
surf = "2.1"
futures = "0.3"
lru-cache = "0.1"

[dependencies.rustic-api]
path = "../../core/api"
