[package]
name = "rustic-http-frontend"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
edition = "2018"
repository = "https://github.com/rustic-music-player/rustic"
homepage = "https://github.com/rustic-music-player/rustic"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mime = "0.2.6"
actix = "0.9"
actix-web = "2"
actix-web-actors = "2"
actix-files = "0.2"
log = "0.4"
failure = "0.1"
futures = "0.1"
rayon = "1.0"
uuid = { version = "0.6", features = ["v4"] }
stopwatch = "0.0.7"
crossbeam-channel = "0.4"
base64 = "0.11"
itertools = "0.8"
urlencoding = { git = "https://github.com/bt/rust_urlencoding" }
serde_qs = { git = "https://github.com/Tarnadas/serde_qs", features = ["actix"] }
rustic-api = { path = "../../core/api", features = ["conversion"] }

[dependencies.rustic-core]
path = "../../core"
