[package]
name = "rustic-http-frontend"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
edition = "2018"
repository = "https://github.com/rustic-music-player/rustic"
homepage = "https://github.com/rustic-music-player/rustic"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mime = "0.3.16"
actix = "0.13"
actix-web = "4.2"
actix-web-actors = "4.1"
actix-files = "0.6"
log = "0.4"
failure = "0.1"
futures = { version = "0.3", features = ["std", "async-await"], default-features = false }
rayon = "1.0"
uuid = { version = "1.2.1", features = ["v4"] }
stopwatch = "0.0.7"
crossbeam-channel = "0.5"
itertools = "0.10"
urlencoding = "1.3.3"
serde_qs = { version = "0.10", features = ["actix4"] }
rustic-api = { path = "../../core/api", features = ["conversion"] }
tokio = "1"

[dependencies.rustic-core]
path = "../../core"

[dev-dependencies]
actix-service = "2"
tokio = { version = "1", features = ["rt", "macros"] }
rustic-api = { path = "../../core/api", features = ["conversion", "testing"] }
