[package]
name = "rustic-iced-frontend"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/rustic-music-player/rustic"
homepage = "https://github.com/rustic-music-player/rustic"

[dependencies]
iced = { version = "0.2", features = ["tokio", "image", "svg"] }
iced_native = "0.3"
log = "0.4"

[dependencies.rustic-api]
path = "../../core/api"
