[package]
name = "rustic-mpd-frontend"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/rustic-music-player/rustic"
homepage = "https://github.com/rustic-music-player/rustic"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
failure = "0.1"
log = "0.4"

[dependencies.rustic-core]
path = "../../core"

[dependencies.serde_mpd]
git = "https://github.com/rustic-music-player/serde_mpd"
