[package]
name = "rustic-systray-frontend"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"

[dependencies.rustic-api]
path = "../../core/api"

[target.'cfg(windows)'.dependencies]
systray = "0.4"
