[package]
name = "rustic-gmusic-provider"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
log = "0.4"
serde = "1"
serde_derive = "1"
maplit = "1"

[dependencies.rustic-core]
path = "../../core"

[dependencies.gmusic]
git = "https://github.com/maxjoehnk/gmusic-rs.git"