[package]
name = "rustic-pocketcasts-provider"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]

[dependencies]
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
rayon = "1.0"
maplit = "1.0.1"

[dependencies.rustic-core]
path = "../../core"

[dependencies.pocketcasts]
git = "https://github.com/maxjoehnk/pocketcasts-rs"
