[package]
name = "rustic-pocketcasts-provider"
version = "0.1.0"
edition = "2018"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]

[dependencies]
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
maplit = "1"
url = "2.1"
async-trait = "0.1"
futures = { version = "0.3", features = ["std", "async-await"], default-features = false }

[dependencies.rustic-core]
path = "../../core"

[dependencies.pocketcasts]
git = "https://github.com/maxjoehnk/pocketcasts-rs"
rev = "8cb78c6"
