[package]
name = "rustic-soundcloud-provider"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]

[dependencies]
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
maplit = "1.0.1"
url = "1.7"
regex = "1.3"
lazy_static = "1.4"

[dependencies.rustic-core]
path = "../../core"

[dependencies.soundcloud]
git = "https://github.com/maxjoehnk/soundcloud-rs"
