[package]
name = "rustic-soundcloud-provider"
version = "0.1.0"
edition = "2018"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]

[dependencies]
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
maplit = "1.0.1"
url = "2.2"
regex = "1.3"
lazy_static = "1.4"
async-trait = "0.1"
futures = "0.3"
soundcloud = { git = "https://github.com/maxjoehnk/soundcloud-rs", rev = "a18a5fe" }

[dependencies.rustic-core]
path = "../../core"
