[package]
name = "rustic-spotify-provider"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
librespot = { version = "0.2", default-features = false }
rspotify = { git = "https://github.com/ramsayleung/rspotify", rev = "b3439c9" }
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
maplit = "^1"
url = "2.2"
async-trait = "0.1"
futures = { version = "0.3", features = ["std", "async-await"], default-features = false }

[dependencies.rustic-core]
path = "../../core"
