[package]
name = "rustic-youtube-provider"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
rustic-core = { path = "../../core" }
async-trait = "0.1"
futures = { version = "0.3", features = ["std", "async-await"], default-features = false }
url = "2.1"
regex = "1.3"
lazy_static = "1.4"
maplit = "1"
youtube = { git = "https://github.com/maxjoehnk/youtube-rs.git"}
